--- a/wrapper_lost_inheritance.html
+++ b/wrapper_lost_inheritance.html
@@ -153,7 +153,7 @@
                             <div id="adv_owner_change_owner_text">Change owner to:</div>
                             <div id="adv_owner_user_list"></div>
                             <button id="adv_owner_change_button" class="ui-button ui-widget ui-corner-all">Change
-                                Owner</button>
+                                Change Owner</button>
                         </div>
                         <div id="adv_effective_tab">
                             <div id="adv_effective_object_name" class="section">Object Name: <span
