--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                             <li id="advtab_title_permissions"><a href="#adv_permissions_tab"
                                     id="adv_permissions_tab_elem">Permissions</a></li>
                             <li id="advtab_title_owner"><a href="#adv_owner_tab" id="adv_owner_tab_elem">Owner</a></li>
-                            <li id="advtab_title_effective"><a href="#adv_effective_tab"
-                                    id="adv_effective_tab_elem">Check Effective Permissions</a></li>
+                            <!-- <li id="advtab_title_effective"><a href="#adv_effective_tab"
+                                    id="adv_effective_tab_elem">Check Effective Permissions</a></li> -->
                         </ul>
                         <div id="adv_permissions_tab">
                             <div id="adv_perm_object_name" class="section">Object Name: <span
