--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                                 </table>
                             </div>
                             <button id="adv_perm_edit" class="ui-button ui-widget ui-corner-all">Edit Permissions</button>
+                            <p class="about">A user with inheritable permissions cannot be removed, uncheck 'Include inheritable...' to remove inheritance </p>
                             <div id="adv_perm_inheritance_div">
                                 <input type="checkbox" id="adv_perm_inheritance" name="inherit">
                                 <label for="adv_perm_inheritance" id="adv_perm_inheritance_label">Include inheritable
